[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cacti/BaseCactus.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cacti/Shooter.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

radius = 60.0

[node name="Shooter" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Uniform" parent="." index="1"]
visible = true

[node name="ShootingArea" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootingArea" index="0"]
shape = SubResource( 1 )

[node name="ShootingTween" type="Tween" parent="." index="5"]

[connection signal="area_entered" from="ShootingArea" to="." method="_on_ShootingArea_area_entered"]
